# predial-mx

./: .gitignore  CLAUDE.md  README.md  arquitectura_definitiva_predial_mx.md  arquitectura_predial_mx.md  checklist-venv-windows.md  directory_design.txt  pyproject.toml  test_plan.json
.claude/: settings.json
catalogs/: INPC_2008-2025.csv  README.md  changes_ageeml.csv  colima_sm_2010-2016.csv  curl_slp.txt  gt_slp.json  municipios_inegi.csv  resumen_para_Code_slp.txt  uma_2016-2025.csv
docs/: BEST_PRACTICES.md  HITL_BITACORA.md  MERGE_CONFLICTS.md  SCHEMA_EVOLUTION.md  esquemas_predial.md  notas_por_estado.md
examples/: COAH_PREDIAL_2015_piedras_negras_expected.json
output/: README.md  audit_pendiente.csv  audit_pendiente.md  audit_treatment_anomalies.csv  audit_treatment_anomalies.md  extraction_log_v2.csv  panel_v2.csv  panel_v2_balance_report.md  panel_v2_balanced.csv  panel_v2_raw.csv  predial_compact_sonora.csv  predial_panel.csv  predial_panel_balanced.csv  predial_panel_pragmatic.csv  quality_report.csv  reextract_log.csv  reporte_taxonomico.md  residual_gaps_report.md  treatment_real_reform_munis.csv
scripts/: _run_pilot_v3_llm.py  apply_treatment_audit.py  audit_treatment_anomalies.py  balance_panel_v2.py  batch_download.py  batch_v3.py  build_panel_pragmatic.py  build_panel_v2.py  compactar_tipo_esquema.py  compare_coverage.py  consolidate_panel.py  consume_reextraction_queue.py  convert_hardcoded_to_v2.py  convert_hardcoded_to_v3.py  convert_v1_to_v2.py  diff_v2_v3.py  fix_errors.py  generar_bitacora.py  generate_audit_document.py  invalid_scheme.py  (+20 more)
(+12301 files in other folders)
