[project]
name = "predial-mx"
version = "0.1.0"
description = "Extracción estructurada de tasas de impuesto predial municipal desde Periódicos Oficiales estatales de México"
requires-python = ">=3.12"

dependencies = [
    # Scraping y descarga
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",

    # PDF
    "pdfplumber>=0.10",
    "pypdf>=3.15",
    "pymupdf>=1.22",

    # Texto
    "unidecode>=1.3",

    # OCR
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "ocrmypdf>=16.0",
    "numpy>=1.24",

    # LLM
    "openai>=1.30",

    # Validación y schemas
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
